Changes to be committed:       modified:   _posts/2021-01-22-metoo-if-its-convenient.md       modified:   _posts/2021-02-01-theory-of-100.md       modified:   _posts/2021-02-10-no-complaints.md       modified:   _posts/2021-02-17-breaking-up-is-hard-to-do.md       modified:   _posts/2021-02-24-mom's-advice.md       modified:   _posts/2021-03-03-worst-to-say-to-a-widow.md       modified:   _posts/2021-03-10-squid.md       modified:   "_posts/2021-03-17-i-\342\231\245\357\270\217-tards.md"       modified:   _posts/2021-03-24-amar-y-querer.md       modified:   _posts/2021-03-25-sixteen-shots-fight-club.md       modified:   _posts/2021-03-31-child-support-and-paternity.md       modified:   _posts/2021-03-31-derby-cakes.md       modified:   _posts/2021-04-05-three-days-in-la.md       modified:   _posts/2021-04-09-latinx-animosity.md       modified:   _posts/2021-04-12-latinx-animosity-pt-deux.md       modified:   _posts/2021-04-14-whoami.md       modified:   _posts/2021-04-18-sixteen-shots-buying-happiness.md       modified:   _posts/2021-04-19-red-pill-vs-machismo.md       modified:   _posts/2021-04-22-perceptions.md       modified:   _posts/2021-04-26-herbal-medicine.md       modified:   _posts/2021-04-28-sixteen-free-dinners.md       modified:   "_posts/2021-05-05-my-\342\231\245\357\270\217-and-frustration-with-roller-derby.md"       modified:   _posts/2021-05-10-i-bleed-green.md       modified:   _posts/2021-05-13-being-selfish-is-selfless.md       modified:   _posts/2021-05-17-judeo-christian-catholic-stuff.md       modified:   _posts/2021-05-20-love-and-death.md       modified:   _posts/2021-05-24-relationships-are-overrated.md       modified:   _posts/2021-05-27-confidence.md       modified:   _posts/2021-06-03-kevin-samuels-and-other-things.md       modified:   _posts/2021-06-07-ghosted.md       modified:   _posts/2021-06-14-are-you-having-the-best-sex.md       modified:   _posts/2021-06-17-gallo-leaving-the-rat-race.md       modified:   _posts/2021-06-28-consen

--- a/_posts/2021-03-10-squid.md
+++ b/_posts/2021-03-10-squid.md
@@ -10,6 +10,9 @@ header:
   og_images: /assets/images/episodes/cover.png
 date: 2021-03-10
 ---
+
+Squid, or how I can be friends with someone from another military branch and random conversations
+
 <iframe src="https://open.spotify.com/embed-podcast/episode/5RjzFsjSIi56VQP7Sehj6j" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
 So this episode was recorded from a livestream, as they usually are. But this week I have a special guest, or just guest however you wish to look at it. He's a friend and former co-worker who brought along another friend.
