--- a/_posts/2021-06-07-ghosted.md
+++ b/_posts/2021-06-07-ghosted.md
@@ -10,6 +10,9 @@ header:
   og_images: /assets/images/episodes/cover.png
 date: 2021-06-07
 ---
+
+Ghosted
+
 <iframe src="https://open.spotify.com/embed-podcast/episode/4aYSMmio3gS3qPiAKeYAZa" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
 Today I chat with yet another derby fran, Valerie Mercury. And today's topic was a mix-up/misread, but I'm glad I reached out to her none the less.
