--- a/_posts/2021-03-17-i-♥️-tards.md
+++ b/_posts/2021-03-17-i-♥️-tards.md
@@ -10,6 +10,9 @@ header:
   og_images: /assets/images/episodes/cover.png
 date: 2021-03-17
 ---
+
+I ♥️ tards, Or how the world would be a better place if we were all a little more tardy
+
 <iframe src="https://open.spotify.com/embed-podcast/episode/2HngEffFlknxuwWGbpqTwL" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
 This episode is just a  long winded way of explaining my solution to making the world a better place.
