modified:   _posts/2021-01-18-pretendoms.md

--- a/_posts/2021-02-01-theory-of-100.md
+++ b/_posts/2021-02-01-theory-of-100.md
@@ -1,19 +1,22 @@
 ---
 title: Theory of 100, Or how to tell if a male might be any good in the sack and other useless things
-exerpt: Today I talk about my theory of 100 and how to apply it into your life. This is in reference to sex and orgasms. In a future episode I'll explore a research paper on my theory.
-image: /assets/image/show-logo.png
+exerpt: "How does my theory of 100 apply it into your life?"
+author_profile: true
+
+description: "How does my theory of 100 apply it into your life?"
+
 header:
   teaser: /assets/images/header-single-episode.png
   overlay_image: /assets/images/header-single-episode.png
   show_overlay_exerpt: false
   overlay_filter: 0.6
-  og_images: /assets/images/episodes/cover.png
+
 date: 2021-02-01
 ---
 
-Theory of 100, Or how to tell if a male might be any good in the sack and other useless things
-
 <iframe src="https://open.spotify.com/embed-podcast/episode/2Nugq9RTZnhxOjLPPLlwoH" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
+Theory of 100, Or how to tell if a male might be any good in the sack and other useless things
 
 Today I talk about my theory of 100 and how to apply it into your life. This is in reference to sex and orgasms. In a future episode I'll explore a research paper on my theory.
 
