--- a/_posts/2021-03-10-squid.md
+++ b/_posts/2021-03-10-squid.md
@@ -1,19 +1,23 @@
 ---
 title: Squid, or how I can be friends with someone from another military branch and random conversations
-exerpt: So this episode was recorded from a livestream, as they usually are. But this week I have a special guest, or just guest however you wish to look at it. He's a friend and former co-worker who brought along another friend.
-image: /assets/image/show-logo.png
+exerpt: "Livestream with a friend and former co-worker who brought along another friend"
+author_profile: true
+
+description: "Livestream with a friend and former co-worker who brought along another friend"
+
 header:
   teaser: /assets/images/header-single-episode.png
   overlay_image: /assets/images/header-single-episode.png
   show_overlay_exerpt: false
   overlay_filter: 0.6
-  og_images: /assets/images/episodes/cover.png
+
 date: 2021-03-10
 ---
 
-Squid, or how I can be friends with someone from another military branch and random conversations
 
 <iframe src="https://open.spotify.com/embed-podcast/episode/5RjzFsjSIi56VQP7Sehj6j" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
+Squid, or how I can be friends with someone from another military branch and random conversations
 
 So this episode was recorded from a livestream, as they usually are. But this week I have a special guest, or just guest however you wish to look at it. He's a friend and former co-worker who brought along another friend.
 We'd talked about recording a Podcast together a few weeks before he moved away and now that he was visiting town we got our act together and stood around chatting for the world to see (but apparently not hear as there was an audio out issue during the livestream)
