--- a/_posts/2021-03-17-i-♥️-tards.md
+++ b/_posts/2021-03-17-i-♥️-tards.md
@@ -1,20 +1,22 @@
 ---
 title: I ♥️ tards, Or how the world would be a better place if we were all a little more tardy
-exerpt: This episode is just a  long winded way of explaining my solution to making the world a better place.
-image: /assets/image/show-logo.png
+exerpt: "Just a  long winded way of explaining my solution to making the world a better place"
+author_profile: true
+
+description: "Just a  long winded way of explaining my solution to making the world a better place"
+
 header:
   teaser: /assets/images/header-single-episode.png
   overlay_image: /assets/images/header-single-episode.png
   show_overlay_exerpt: false
   overlay_filter: 0.6
-  og_images: /assets/images/episodes/cover.png
+
 date: 2021-03-17
 ---
 
-I ♥️ tards, Or how the world would be a better place if we were all a little more tardy
-
 <iframe src="https://open.spotify.com/embed-podcast/episode/2HngEffFlknxuwWGbpqTwL" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
+I ♥️ tards, Or how the world would be a better place if we were all a little more tardy
 This episode is just a  long winded way of explaining my solution to making the world a better place.
 I get the title can be off-putting, but take a few minutes and hear me out. It'll make sense or at the very least, make you laugh.
 
