--- a/_posts/2021-07-22-sex-work.md
+++ b/_posts/2021-07-22-sex-work.md
@@ -1,15 +1,15 @@
 ---
 title: Sex Work
-exerpt: Today I talk with my new friend former sex worker, and highly ranked student in College.
+exerpt: "Today I talk with my new friend former sex worker, and highly ranked student in College."
 image: /assets/image/show-logo.png
 header:
   teaser: /assets/images/header-single-episode.png
   overlay_image: /assets/images/header-single-episode.png
   show_overlay_exerpt: false
   overlay_filter: 0.6
-  og_images: /assets/images/episodes/cover.png
 date: 2021-07-22
 ---
+
 <iframe src="https://open.spotify.com/embed-podcast/episode/00ttAUhgAwoObjH0pAWhys" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
 Today I talk with my new friend former sex worker, and highly ranked student in College.
