fix 'excerpt' to properly render and add author profile to each post

--- a/_posts/2021-02-01-theory-of-100.md
+++ b/_posts/2021-02-01-theory-of-100.md
@@ -1,6 +1,6 @@
 ---
 title: Theory of 100, Or how to tell if a male might be any good in the sack and other useless things
-exerpt: "How does my theory of 100 apply it into your life?"
+excerpt: "How does my theory of 100 apply it into your life?"
 author_profile: true
 
 description: "How does my theory of 100 apply it into your life?"
@@ -8,7 +8,7 @@ description: "How does my theory of 100 apply it into your life?"
 header:
   teaser: /assets/images/header-single-episode.png
   overlay_image: /assets/images/header-single-episode.png
-  show_overlay_exerpt: false
+  show_overlay_excerpt: false
   overlay_filter: 0.6
 
 date: 2021-02-01
