--- a/_posts/2021-03-10-squid.md
+++ b/_posts/2021-03-10-squid.md
@@ -1,6 +1,6 @@
 ---
 title: Squid, or how I can be friends with someone from another military branch and random conversations
-exerpt: "Livestream with a friend and former co-worker who brought along another friend"
+excerpt: "Livestream with a friend and former co-worker who brought along another friend"
 author_profile: true
 
 description: "Livestream with a friend and former co-worker who brought along another friend"
@@ -8,7 +8,7 @@ description: "Livestream with a friend and former co-worker who brought along an
 header:
   teaser: /assets/images/header-single-episode.png
   overlay_image: /assets/images/header-single-episode.png
-  show_overlay_exerpt: false
+  show_overlay_excerpt: false
   overlay_filter: 0.6
 
 date: 2021-03-10
