--- a/_posts/2021-03-17-i-♥️-tards.md
+++ b/_posts/2021-03-17-i-♥️-tards.md
@@ -1,6 +1,6 @@
 ---
 title: I ♥️ tards, Or how the world would be a better place if we were all a little more tardy
-exerpt: "Just a  long winded way of explaining my solution to making the world a better place"
+excerpt: "Just a  long winded way of explaining my solution to making the world a better place"
 author_profile: true
 
 description: "Just a  long winded way of explaining my solution to making the world a better place"
@@ -8,7 +8,7 @@ description: "Just a  long winded way of explaining my solution to making the wo
 header:
   teaser: /assets/images/header-single-episode.png
   overlay_image: /assets/images/header-single-episode.png
-  show_overlay_exerpt: false
+  show_overlay_excerpt: false
   overlay_filter: 0.6
 
 date: 2021-03-17
