--- a/_posts/2021-04-14-whoami.md
+++ b/_posts/2021-04-14-whoami.md
@@ -1,13 +1,12 @@
 ---
 title: whoami
-exerpt: Today I talk about who I am and how I got to be a sex addict. I could give a little more detail here, but do you really read this?
-image: /assets/image/show-logo.png
+excerpt: Today I talk about who I am and how I got to be a sex addict. I could give a little more detail here, but do you really read this?
+author_profile: true
 header:
   teaser: /assets/images/header-single-episode.png
   overlay_image: /assets/images/header-single-episode.png
-  show_overlay_exerpt: false
+  show_overlay_excerpt: false
   overlay_filter: 0.6
-  og_images: /assets/images/episodes/cover.png
 date: 2021-04-14
 ---
 
