--- a/_posts/2021-06-07-ghosted.md
+++ b/_posts/2021-06-07-ghosted.md
@@ -1,13 +1,12 @@
 ---
 title: Ghosted
-exerpt: Today I chat with yet another derby fran, Valerie Mercury. And today's topic was a mix-up/misread, but I'm glad I reached out to her none the less.
-image: /assets/image/show-logo.png
+excerpt: "Today I chat with yet another derby fran, Valerie Mercury. And today's topic was a mix-up/misread, but I'm glad I reached out to her none the less"
+author_profile: true
 header:
   teaser: /assets/images/header-single-episode.png
   overlay_image: /assets/images/header-single-episode.png
-  show_overlay_exerpt: false
+  show_overlay_excerpt: false
   overlay_filter: 0.6
-  og_images: /assets/images/episodes/cover.png
 date: 2021-06-07
 ---
 
