--- a/_posts/2021-06-28-consent.md
+++ b/_posts/2021-06-28-consent.md
@@ -1,13 +1,12 @@
 ---
 title: Consent
-exerpt: Today I talk about consent and how important it is. as well as the importance of not being dismissive when talking about consent and sex
-image: /assets/image/show-logo.png
+excerpt: "The importance of not being dismissive when talking about consent and sex"
+author_profile: true
 header:
   teaser: /assets/images/header-single-episode.png
   overlay_image: /assets/images/header-single-episode.png
-  show_overlay_exerpt: false
+  show_overlay_excerpt: false
   overlay_filter: 0.6
-  og_images: /assets/images/episodes/cover.png
 date: 2021-06-28
 ---
 
