--- a/_posts/2021-07-15-why-stop.md
+++ b/_posts/2021-07-15-why-stop.md
@@ -1,18 +1,17 @@
 ---
 title: Why Stop
-exerpt: <iframe src="https://open.spotify.com/embed-podcast/episode/5r86ohH2kDimrHqqhLiDAu" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-image: /assets/image/show-logo.png
+excerpt: "Another conversation with Bonita"
+author_profile: true
 header:
   teaser: /assets/images/header-single-episode.png
   overlay_image: /assets/images/header-single-episode.png
-  show_overlay_exerpt: false
+  show_overlay_excerpt: false
   overlay_filter: 0.6
-  og_images: /assets/images/episodes/cover.png
 date: 2021-07-15
 ---
+
 <iframe src="https://open.spotify.com/embed-podcast/episode/2igDHT9ClLOggLZvx0kOon" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
-<iframe src="https://open.spotify.com/embed-podcast/episode/5r86ohH2kDimrHqqhLiDAu" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
 # Mentioned items
 
