--- a/_posts/2021-07-22-sex-work.md
+++ b/_posts/2021-07-22-sex-work.md
@@ -1,11 +1,11 @@
 ---
 title: Sex Work
-exerpt: "Today I talk with my new friend former sex worker, and highly ranked student in College."
-image: /assets/image/show-logo.png
+excerpt: "Today I talk with my new friend former sex worker, and highly ranked student in College."
+author_profile: true
 header:
   teaser: /assets/images/header-single-episode.png
   overlay_image: /assets/images/header-single-episode.png
-  show_overlay_exerpt: false
+  show_overlay_excerpt: false
   overlay_filter: 0.6
 date: 2021-07-22
 ---
