modified:   _posts/2021-11-07-gallo.md

--- a/_posts/2021-11-07-gallo.md
+++ b/_posts/2021-11-07-gallo.md
@@ -1,7 +1,7 @@
 ---
 title: Gallo
 author_profile: true
-excerpt:  @cochinochingon (on all platforms) "Sucias are my Favorite" podcast (NSFW) cochinochingon.com/about He left his corporate job to explore his creative pursuits
+excerpt: "@cochinochingon (on all platforms) "Sucias are my Favorite" podcast (NSFW) cochinochingon.com/about He left his corporate job to explore his creative pursuits"
 date: 2021-11-07
 category: feat
 header:
